# tictactoe

./: .gitignore  Main.hs  stack.yaml  tictactoe.cabal
Entities/: Board.hs  Coordinate.hs  Line.hs  Mark.hs  Player.hs
